# llvmpym

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  LICENSE.LLVM  README.md  flake.nix  justfile  note.typ  pyproject.toml  requirements.txt  t
.github/workflows/: buildwheels.yml  sphinx.yml
doc/: nanobind_note.typ
docs/source/: conf.py  development.rst  index.rst  installation.rst  tips.rst  usage.rst
example/: el_psy_congaroo.py  ir_builder.py  ir_fpadd.py  llvmir_builder.py  parse_ir_assmebly.py  verify_module_false.py
scripts/action/: install_llvm.sh
src/: llvmpym_ext.cpp
src/llvm/: Analysis.cpp  Analysis.h  BitReader.cpp  BitReader.h  Core.cpp  Core.h  Disassembler.cpp  Disassembler.h  ErrorHandling.cpp  ErrorHandling.h  Linker.cpp  Linker.h  Object.cpp  Object.h  Support.cpp  Support.h  Target.cpp  Target.h  TargetMachine.cpp  TargetMachine.h  Types.h  Utils.cpp  Utils.h  _types.h  _utils.h  types.h  types_priv.h  utils.h  utils_priv.h
src/llvm/Core/: enum.cpp  enum.h  globalFunc.cpp  globalFunc.h  iterator.cpp  iterator.h  miscClasses.cpp  miscClasses.h  type.cpp  type.h  utils.cpp  utils.h  value.cpp  value.h
src/llvm/_types/: PyContext.cpp  PyContext.h  PyLLVMObject.h  PyMemoryBuffer.cpp  PyMemoryBuffer.h  PyMetadataEntries.cpp  PyMetadataEntries.h  PyModule.cpp  PyModule.h  PyModuleFlagEntries.cpp  PyModuleFlagEntries.h  PyModuleProvider.cpp  PyModuleProvider.h  PyOperandBundle.cpp  PyOperandBundle.h  PyPassManagerBase.cpp  PyPassManagerBase.h  utils.h
src/llvm/types/: PyContext.cpp  PyContext.h  PyLLVMObject.h  PyMemoryBuffer.cpp  PyMemoryBuffer.h  PyMetadataEntries.h  PyModule.cpp  PyModule.h  PyModuleFlagEntries.h  PyModuleProvider.h  PyOperandBundle.h  PyPassManagerBase.h
src/llvm/types_priv/: PyContext.h  PyLLVMObject.h  PyMemoryBuffer.cpp  PyMemoryBuffer.h  PyMetadataEntries.cpp  PyMetadataEntries.h  PyModule.cpp  PyModule.h  PyModuleFlagEntries.cpp  PyModuleFlagEntries.h  PyModuleProvider.cpp  PyModuleProvider.h  PyOperandBundle.cpp  PyOperandBundle.h  PyPassManagerBase.cpp  PyPassManagerBase.h  PyTargetData.cpp  PyTargetData.h  PyTargetMachine.cpp  PyTargetMachine.h  PyTargetMachineOptions.cpp  PyTargetMachineOptions.h  PymBinary.cpp  PymBinary.h  PymContext.cpp  PymContext.h  PymDisasmContext.cpp  PymDisasmContext.h  PymLLVMObject.h  PymMemoryBuffer.cpp  PymMemoryBuffer.h  PymMetadataEntries.cpp  PymMetadataEntries.h  PymModule.cpp  PymModule.h  PymModuleFlagEntries.cpp  PymModuleFlagEntries.h  PymModuleProvider.cpp  PymModuleProvider.h  PymOperandBundle.cpp  (+10 more)
src/llvmpym/: __init__.py  analysis.py  bit_reader.py  bit_writer.py  core.py  core.pyi  disassembler.py  error_handling.py  linker.py  object.py  support.py  target.py  target_machine.py  utils.py
tests/: test_core.py
