[project]
name = "llvmpym"
version = "0.0.1"
description = "LLVM python binding"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  { name = "Meow King", email = "mr.meowking@anche.no" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/Ziqi-Yang/llvmpym"

[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build/{wheel_tag}" # Setuptools-style build caching in a local directory
wheel.py-api = "cp312" # Build stable ABI wheels for CPython 3.12+

[tool.cibuildwheel]
build-verbosity = 1
test-command = "pytest {project}/tests" # Run pytest to ensure that the package was correctly built
test-requires = "pytest"
