[project]
name = "llvmpym"
version = "0.0.5"
description = "LLVM python binding"
readme = "README.md"
# can only be compiled for python >= 3.12
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  { name = "Meow King", email = "mr.meowking@anche.no" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/Ziqi-Yang/llvmpym"

[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build/{wheel_tag}" # Setuptools-style build caching in a local directory
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312" 

[tool.cibuildwheel]
build-verbosity = 1
build-frontend = "build"
archs = "auto64"
skip = "*musllinux*" # doesn't find LLVM musl build
before-all = "bash ./scripts/action/install_llvm.sh"

# test-command = "pytest {project}/tests" # Run pytest to ensure that the package was correctly built
# test-requires = "pytest"

[tool.cibuildwheel.linux]
# archs = ["auto64", "aarch64"]
environment = { SKBUILD_CMAKE_ARGS="-DLLVM_DIR=$(pwd)/llvm-build/lib/cmake/llvm"}
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.windows]
environment = { SKBUILD_CMAKE_ARGS="-DLLVM_DIR=D:/a/llvmpym/llvmpym/llvm-build/lib/cmake/llvm" }

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "14.0"
PATH="/opt/homebrew/opt/llvm/bin:$PATH"
LDFLAGS="-L/opt/homebrew/opt/llvm/lib/c++ -L/opt/homebrew/opt/llvm/lib -lunwind"
CPPFLAGS="-I/opt/homebrew/opt/llvm/include"



